--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav.sticky .menu-btn {
 .home {
   height: 100vh;
   width: 100%;
-  background: url("images/background.png") no-repeat;
+  background: url("Gemini_Generated_Image_st6ncxst6ncxst6n.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -593,4 +593,5 @@ footer .text span a:hover {
     font-size: 50px;
     color: #4070f4;
   }
+
 }
