--- a/style.css
+++ b/style.css
@@ -141,10 +141,10 @@ section {
 ===================== */
 .scroll-button {
   position: fixed;
-  right: 22px;
+  left: 22px;
   bottom: 22px;
   z-index: 999;
-  display: none;
+  
 }
 
 .scroll-button a {
